compiler/testData/multiplatform/inlineClasses/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/jvm.kt:5:14: error: 'actual class Foo2 : Any' has no corresponding expected declaration
The following declaration is incompatible because modifiers are different (companion, inner, inline, value):
    expect class Foo2 : Any

actual class Foo2 actual constructor(actual val y: String)
             ^

-- JS --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/js.kt:5:14: error: 'actual class Foo2 : Any' has no corresponding expected declaration
The following declaration is incompatible because modifiers are different (companion, inner, inline, value):
    expect class Foo2 : Any

actual class Foo2 actual constructor(actual val y: String)
             ^
